--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       }
 
     }
-    /* Add the following styles for the loader */
+    /* Add the loader styles */
     #loader-wrapper {
         position: fixed;
         top: 0;
@@ -40,65 +40,61 @@
         height: 100%;
         z-index: 1000;
         background-color: #fff;
+        display: flex;
+        justify-content: center;
+        align-items: center;
       }
 
       #loader {
-        display: block;
+        display: inline-block;
+        width: 80px;
+        height: 80px;
         position: relative;
-        left: 50%;
-        top: 50%;
-        width: 150px;
-        height: 150px;
-        margin: -75px 0 0 -75px;
+        border: 10px solid #333;
         border-radius: 50%;
-        border: 3px solid transparent;
-        border-top-color: #9370db;
-        -webkit-animation: spin 2s linear infinite;
-        animation: spin 2s linear infinite;
+        animation: loader 1.2s infinite ease;
       }
 
       .loader-section {
         position: fixed;
         top: 0;
-        width: 50%;
+        width: 51%;
         height: 100%;
-        background: #fff;
+        background-color: #fff;
         z-index: 1001;
       }
 
-      .loader-section.section-left {
+      .section-left {
         left: 0;
       }
 
-      .loader-section.section-right {
+      .section-right {
         right: 0;
       }
 
-      @-webkit-keyframes spin {
+      @keyframes loader {
         0% {
-          -webkit-transform: rotate(0deg);
           transform: rotate(0deg);
         }
         100% {
-          -webkit-transform: rotate(360deg);
-          transform: rotate(360deg);
-        }
-      }
-
-      @keyframes spin {
-        0% {
-          -webkit-transform: rotate(0deg);
-          transform: rotate(0deg);
-        }
-        100% {
-          -webkit-transform: rotate(360deg);
           transform: rotate(360deg);
         }
       }
 
       /* Hide the loader when the page is fully loaded */
-      .loaded #loader-wrapper {
-        display: none;
+      #loader-wrapper.loaded {
+        animation: fadeOut 1s;
+        animation-fill-mode: forwards;
+      }
+
+      @keyframes fadeOut {
+        0% {
+          opacity: 1;
+        }
+        100% {
+          opacity: 0;
+          visibility: hidden;
+        }
       }
   </style>
 
