--- a/index.html
+++ b/index.html
@@ -155,6 +155,11 @@
 
       <!-- Main JavaScript file -->
       <script src="assets/js/main.js"></script>
+      <script>
+        if (window.location.href.endsWith("index.html")) {
+          window.location.href = window.location.href.slice(0, -10);
+        }
+        </script>
 
 	</body>
 </html>
