--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <header class="major">
 
 									<h2><a href="https://gulecsec-mediastats-youtube-api-app-f7eqyr.streamlit.app/">YouTube Stats of Turkish News Media</a></h2>
-									<p>This project aims to analyze the popularity and engagement of 15 YouTube channels belonging to Turkish news media by scraping their statistics.</p>
+									<p>This project combines data from the YouTube API and web scraping techniques to analyze 15 Turkish news media channels on YouTube. By gathering relevant statistics, insights into audience preferences and behaviors will be obtained to inform strategies for improving engagement and increasing viewership.</p>
 								</header>
 								<a href="https://gulecsec-mediastats-youtube-api-app-f7eqyr.streamlit.app/" class="image main"><img src="images/YouTubeStats.png" alt="" /></a>
 								<ul class="actions special">
@@ -74,9 +74,7 @@
                   <h2><a href="https://jimhouserock-capstone-project-diegachatbot--capstone-app-qnoy2d.streamlit.app/">Diega, Le Wagon Mexico Web Assistant</a></h2>
                 </header>
                 <a href="https://jimhouserock-capstone-project-diegachatbot--capstone-app-qnoy2d.streamlit.app/" class="image fit"><img src="images/Diega.png" alt="" /></a>
-                <p>After completing 10-week data science course, now it is time to choose the final projects.
-                  For our final project, we have decided to build a web assistant in the form of a chatbot.
-                  This chatbot will be designed to answer school-related questions in a relevant and accurate manner.</p>
+                <p>The chatbot is designed to accurately and contextually answer school-related questions using NLP techniques. It also features a user-friendly web interface built on the Streamlit app.</p>
                 <ul class="actions special">
                   <li><a href="https://jimhouserock-capstone-project-diegachatbot--capstone-app-qnoy2d.streamlit.app/" class="button">View</a></li>
                 </ul>
@@ -89,8 +87,7 @@
 										<h2><a href="https://www.appsheet.com/start/d60508d4-eee1-4b2c-9d38-5da331133be0#appName=daily_report_all_tabs-151940733&row=onlyvalue&table=_Per+User+Settings&view=Settings">SiteHercules, Construction daily report app</a></h2>
 									</header>
 									<a href="https://www.appsheet.com/start/d60508d4-eee1-4b2c-9d38-5da331133be0#appName=daily_report_all_tabs-151940733&row=onlyvalue&table=_Per+User+Settings&view=Settings" class="image fit"><img src="images/SITEHERCULES-Welcome page.png" alt="" /></a>
-									<p>Our project simplifies daily tracking in construction and prioritizes user-friendliness for operators.
-                    It streamlines data input and access, enabling more accurate analysis of construction progress.</p>
+									<p>Built using AppSheet, simplifies daily construction tracking and prioritizes user-friendliness for operators. By streamlining data input and access, this app enables more accurate analysis of construction progress.</p>
 									<ul class="actions special">
 										<li><a href="https://www.appsheet.com/start/d60508d4-eee1-4b2c-9d38-5da331133be0#appName=daily_report_all_tabs-151940733&row=onlyvalue&table=_Per+User+Settings&view=Settings" class="button">View</a></li>
 									</ul>
