--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
     <link rel="stylesheet" href="assets/css/main.css" />
     <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 
-
-
-
-
+    <!-- Add the background image CSS code here -->
+    <style>
+      body {
+        background-image: url("images/backgroung.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+      }
+    </style>
 </head>
 <body>
   <!-- Add the loading animation code here -->
