--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Add the background image CSS code here -->
     <style>
       body {
-        background-image: url("/workspaces/myportfolio/images/backgroung.jpg");
+        background-image: url("https://raw.githubusercontent.com/gulecsec/myportfolio/master/backgroung.jpg");
         background-repeat: no-repeat;
         background-size: cover;
       }
