--- a/index.html
+++ b/index.html
@@ -10,14 +10,19 @@
     <!-- Add the background image CSS code here -->
     <style>
       body {
-        background-image: url("https://raw.githubusercontent.com/gulecsec/myportfolio/main/images/backgroung.jpg");
+        background-image: url("https://raw.githubusercontent.com/gulecsec/myportfolio/master/images/backgroung.jpg");
         background-repeat: no-repeat;
         background-size: cover;
       }
     </style>
-</head>
-<body>
-  
+  </head>
+  <body>
+    <!-- Add the loading animation code here -->
+    <div id="loader-wrapper">
+      <div id="loader"></div>
+      <div class="loader-section section-left"></div>
+      <div class="loader-section section-right"></div>
+    </div>
 
 		<!-- Wrapper -->
 			<div id="wrapper" class="fade-in">
