--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Add the background image CSS code here -->
     <style>
       body {
-        background-image: url("https://github.com/gulecsec/myportfolio/blob/main/images/background.jpg");
+        background-image: src="images/backgroung.jpg";
         background-repeat: no-repeat;
         background-size: cover;
       }
