--- a/index.html
+++ b/index.html
@@ -7,63 +7,45 @@
     <link rel="stylesheet" href="assets/css/main.css" />
     <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
     <style>
-      #loader-wrapper {
+      body {
+        background-color: #111;
+      }
+
+      .animate-bg {
         position: fixed;
         top: 0;
         left: 0;
         width: 100%;
         height: 100%;
-        z-index: 1000;
-        background-color: #ffffff;
+        z-index: -1;
+        animation: animate-background 10s ease-in-out infinite;
       }
 
-      #loader {
-        display: block;
-        position: relative;
-        left: 50%;
-        top: 50%;
-        width: 150px;
-        height: 150px;
-        margin: -75px 0 0 -75px;
-        border-radius: 50%;
-        border: 3px solid rgba(255, 255, 255, 0.9);
-        border-top-color: #FFA07A;
-        animation: spin 2s linear infinite;
-      }
-
-      .loader-section {
-        position: fixed;
-        top: 0;
-        width: 50%;
-        height: 100%;
-        background-color: #FFA07A;
-        z-index: 1000;
-      }
-
-      .loader-section.section-left {
-        left: 0;
-      }
-
-      .loader-section.section-right {
-        right: 0;
-      }
-
-      @keyframes spin {
+      @keyframes animate-background {
         0% {
-          transform: rotate(0deg);
+          background-color: #F20505;
+        }
+        25% {
+          background-color: #F2B705;
+        }
+        50% {
+          background-color: #1CF205;
+        }
+        75% {
+          background-color: #051CF2;
         }
         100% {
-          transform: rotate(360deg);
+          background-color: #F205B3;
         }
       }
     </style>
   </head>
   <body>
+    <!-- Add the loading animation code here -->
     <div id="loader-wrapper">
       <div id="loader"></div>
       <div class="loader-section section-left"></div>
       <div class="loader-section section-right"></div>
-
     </div>
 
 		<!-- Wrapper -->
