--- a/index.html
+++ b/index.html
@@ -6,39 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
     <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-    <style>
-      body {
-        background-color: #111;
-      }
 
-      .animate-bg {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        z-index: -1;
-        animation: animate-background 10s ease-in-out infinite;
-      }
-
-      @keyframes animate-background {
-        0% {
-          background-color: #F20505;
-        }
-        25% {
-          background-color: #F2B705;
-        }
-        50% {
-          background-color: #1CF205;
-        }
-        75% {
-          background-color: #051CF2;
-        }
-        100% {
-          background-color: #F205B3;
-        }
-      }
-    </style>
   </head>
   <body>
     <!-- Add the loading animation code here -->
@@ -50,6 +18,15 @@
 
 		<!-- Wrapper -->
 			<div id="wrapper" class="fade-in">
+
+        <!-- Add the animation code here -->
+  <div class="animation-wrapper">
+    <div class="animation-box"></div>
+    <div class="animation-box"></div>
+    <div class="animation-box"></div>
+    <div class="animation-box"></div>
+    <div class="animation-box"></div>
+  </div>
 
 				<!-- Intro -->
 					<div id="intro">
