--- a/index.html
+++ b/index.html
@@ -6,7 +6,72 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
     <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+    <style>
+      /* Add the loading animation code here */
+      #loader-wrapper {
+        position: fixed;
+        z-index: 1000;
+        width: 100%;
+        height: 100%;
+        background-color: #f1f1f1;
+      }
 
+      #loader {
+        display: inline-block;
+        width: 80px;
+        height: 80px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        border: 10px solid #3498db;
+        border-radius: 50%;
+        animation: spin 1.2s linear infinite;
+      }
+
+      .loader-section {
+        position: fixed;
+        z-index: 1000;
+        width: 50%;
+        height: 100%;
+        background-color: #f1f1f1;
+      }
+
+      .section-left {
+        left: 0;
+      }
+
+      .section-right {
+        right: 0;
+      }
+
+      /* Define the animation */
+      @keyframes spin {
+        0% {
+          transform: rotate(0deg);
+        }
+        100% {
+          transform: rotate(360deg);
+        }
+      }
+
+      /* Fade in animation */
+      .fade-in {
+        opacity: 0;
+        animation: fadeIn ease-in 1;
+        animation-fill-mode: forwards;
+        animation-duration: 1s;
+      }
+
+      @keyframes fadeIn {
+        0% {
+          opacity: 0;
+        }
+        100% {
+          opacity: 1;
+        }
+      }
+    </style>
   </head>
   <body>
     <!-- Add the loading animation code here -->
@@ -19,7 +84,7 @@
 		<!-- Wrapper -->
 			<div id="wrapper" class="fade-in">
 
-  
+
 
 				<!-- Intro -->
 					<div id="intro">
