--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>SELCAN GULEC's PORTFOLIO</h1>
+						<h1>Selcan Gulec's Portfolio</h1>
 						<p>Meticulous Planning Engineer experienced in P6 | Jr. Data Scientist well-versed in SQL, Tableau, Python  <a href="https://www.linkedin.com/in/">@sgulec</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
