--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 						<section class="split contact">
 							<section class="alt">
 								<h3>Location</h3>
-								<p>Mexico City, MX</p>
+								<p>Istanbul, TUR</p>
 							</section>
 
 							<section>
