--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="#main">Projects</a></li>
+							<li class="active"><a href="#main">About Me</a></li>
 
 						</ul>
 						<ul class="icons">
