--- a/aboutme.html
+++ b/aboutme.html
@@ -1,1 +1,16 @@
-
+<!-- about.html -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <title>ABOUT ME</title>
+    <!-- Add your stylesheets, scripts, or other metadata here -->
+  </head>
+  <body>
+    <!-- Your "About Me" content goes here -->
+    <h1>About Me</h1>
+    <p>This is where you can provide information about yourself.</p>
+    <!-- Add more content as needed -->
+  </body>
+</html>
