--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="#main">Projects</a></li>
-							<li><a href="about.html">About Me</a></li> <!-- New link for "About Me" -->
+							<li><a href="aboutme.html">About Me</a></li> <!-- New link for "About Me" -->
 
 						</ul>
 						<ul class="icons">
