--- a/aboutme.html
+++ b/aboutme.html
@@ -1,16 +1,48 @@
-<!-- about.html -->
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <title>ABOUT ME</title>
-    <!-- Add your stylesheets, scripts, or other metadata here -->
-  </head>
-  <body>
-    <!-- Your "About Me" content goes here -->
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+  <title>About Me</title>
+  <link rel="stylesheet" href="assets/css/main.css" />
+  <style>
+    /* Add custom styles for the About Me page */
+    body {
+      font-family: 'Arial', sans-serif;
+      background-color: #f4f4f4;
+      color: #333;
+      padding: 20px;
+    }
+
+    h1 {
+      color: #2c3e50;
+      text-align: center;
+    }
+
+    p {
+      font-size: 1.2em;
+      line-height: 1.6;
+    }
+
+    .container {
+      max-width: 800px;
+      margin: 0 auto;
+    }
+
+    /* Add more styles as needed */
+  </style>
+</head>
+<body>
+  <div class="container">
     <h1>About Me</h1>
-    <p>This is where you can provide information about yourself.</p>
-    <!-- Add more content as needed -->
-  </body>
+    <p>Welcome to my portfolio! I'm Selcan Gulec, a meticulous Planning Engineer with experience in P6. As a Junior Data Scientist, I'm well-versed in SQL, Tableau, and Python.</p>
+
+    <p>I'm passionate about leveraging data to drive informed decisions and create meaningful insights. Whether it's project planning or data analysis, I bring a dedicated and analytical approach to my work.</p>
+
+    <p>Feel free to explore my projects and connect with me on <a href="https://www.linkedin.com/in/sgulec/" target="_blank">LinkedIn</a> or <a href="https://github.com/gulecsec" target="_blank">GitHub</a>.</p>
+
+    <p>Thank you for visiting!</p>
+  </div>
+</body>
 </html>
+
