--- a/aboutme.html
+++ b/aboutme.html
@@ -67,6 +67,7 @@
     <p>When I'm not coding or planning projects, you'll find me enjoying a cup of coffee ☕, watching Premier League, or playing with my little chihuahua, Addie.</p>
 
     <div class="image-container">
+      <link rel="icon" type="image/jpg" href="images/Addie.JPG">
       <img src="your-profile-image.jpg" alt="Thaddeus Stevens, AKA "Addie" />
     </div>
 
