--- a/aboutme.html
+++ b/aboutme.html
@@ -75,11 +75,12 @@
 
     <p>Thanks for stopping by! Let's create something amazing together. 🚀</p>
 
-    <!-- Home button -->
-    <a href="index.html" class="home-link">Go Back to Home</a>
+    <div class="container">
+    <!-- Creative Home button -->
+    <a href="index.html" class="home-btn">🏠 Go Back to Home</a>
 
-    <h1>About Me</h1>
-    <!-- ... (rest of the content) ... -->
+
+    
   </div>
 </body>
 </html>
