--- a/aboutme.html
+++ b/aboutme.html
@@ -82,5 +82,28 @@
 
     
   </div>
+    <!-- Footer -->
+<footer>
+  <section class="split contact">
+    <section class="alt">
+      <h3>Location</h3>
+      <p>Mexico City, MX</p>
+    </section>
+
+    <section>
+      <h3>Email</h3>
+      <p><a href="#">selcangulec@proton.me</a></p>
+    </section>
+
+    <!-- Social icons -->
+    <section>
+      <h3>Social</h3>
+      <ul class="icons alt">
+        <li><a href="https://www.linkedin.com/in/sgulec/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+        <li><a href="https://github.com/gulecsec" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+      </ul>
+    </section>
+  </section>
+</footer>
 </body>
 </html>
