--- a/aboutme.html
+++ b/aboutme.html
@@ -15,6 +15,16 @@
       margin: 0;
       padding: 0;
       box-sizing: border-box;
+      animation: gradientAnimation 10s infinite alternate; /* Background animation */
+    }
+
+    @keyframes gradientAnimation {
+      0% {
+        background-position: 0% 50%;
+      }
+      100% {
+        background-position: 100% 50%;
+      }
     }
 
     .container {
@@ -30,7 +40,8 @@
     h1 {
       color: #3498db;
       text-align: center;
-      margin-bottom: 20px;
+      margin-bottom: 10px;
+      font-size: 24px; /* Reduced font size */
     }
 
     p {
@@ -55,7 +66,7 @@
       position: absolute;
       top: 0;
       left: 0;
-      width: 300px; /* Adjust the width as needed */
+      width: 300px;
       max-width: 100%;
       border-radius: 8px;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
