--- a/work-experiences.html
+++ b/work-experiences.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-  <title>Work Experiences - SELCAN GULEC's PORTFOLIO</title>
+  <title>My Work Experiences</title>
   <link rel="stylesheet" href="assets/css/main.css" />
   <style>
     /* Add custom styles for the Work Experiences page */
