--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 						<ul class="links">
 							<li class="active"><a href="#main">Projects</a></li>
 							<li><a href="aboutme.html">About Me</a></li> <!-- New link for "About Me" -->
+							<li><a href="work-experiences.html">Work Experiences</a></li> <!-- New link for "Work Experiences" -->
 
 						</ul>
 						<ul class="icons">
