--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="#main">Projects</a></li>
+							<li class="active"><a href="#main">Portfolio Projects</a></li>
 							<li><a href="aboutme.html">About Me</a></li> <!-- New link for "About Me" -->
 							<li><a href="work-experiences.html">Work Experiences</a></li> <!-- New link for "Work Experiences" -->
 
