--- a/aboutme.html
+++ b/aboutme.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
   <title>About Me</title>
   <link rel="stylesheet" href="assets/css/main.css" />
+  <link rel="icon" type="image/jpg" href="images/My Icon.JPG">
   <style>
     /* Add custom styles for the About Me page */
     body {
