--- a/work-experiences.html
+++ b/work-experiences.html
@@ -47,10 +47,11 @@
     }
     .experience h2 {
       color: #3498db;
-      margin-bottom: 10px;
+      margin-bottom: 5px;
     }
     .experience p {
       color: #777;
+      margin-top: 5px; 
     }
     /* Style for the home button */
     .home-btn {
