--- a/work-experiences.html
+++ b/work-experiences.html
@@ -53,6 +53,11 @@
       color: #777;
       margin-top: 5px; 
     }
+
+    .experience h2 + p {
+      margin-top: 10px;
+    }
+    
     /* Style for the home button */
     .home-btn {
       display: block;
