--- a/work-experiences.html
+++ b/work-experiences.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
   <title>My Work Experiences</title>
   <link rel="stylesheet" href="assets/css/main.css" />
+  <link rel="icon" type="image/jpg" href="images/My Icon.JPG">
   <style>
     /* Add custom styles for the Work Experiences page */
     body {
@@ -28,6 +29,7 @@
       color: #3498db;
       text-align: center;
       margin-bottom: 20px;
+      margin-top: 10px;
     }
     h2 {
       color: #333;
@@ -37,6 +39,7 @@
       font-size: 1.2em;
       line-height: 1.6;
       color: #555;
+      margin-top: 10px;
     }
     .highlight {
       color: #e74c3c;
@@ -162,7 +165,7 @@ https://www.linkedin.com/company/limakkuwait-tr-gmail-com/?originalSubdomain=kw
         <li>Worked with cross-functional engineering teams to generate progress reports on a daily, weekly, and monthly basis, tracking project efficiency, costs, and resource procurement.</li>
         <li>Proficiently enhanced communication and collaboration among all construction disciplines by developing and updating progress dashboards, resulting in a remarkable increase in monthly interim payments.</li>
     </div>
-    <!-- Add more experiences as needed -->
+    
     <!-- Home button -->
     <a href="index.html" class="home-btn">🏠 Go Back to Home</a>
   </div>
