--- a/work-experiences.html
+++ b/work-experiences.html
@@ -77,6 +77,29 @@
     .home-btn:hover {
       background-color: #2980b9;
     }
+
+    .section {
+      padding: 20px 0;
+      border-bottom: 1px solid #ddd;
+    }
+
+    .section:last-child {
+      border-bottom: none;
+    }
+
+    .section-heading {
+      color: #3498db;
+      text-align: center;
+      font-size: 2em;
+      margin-bottom: 20px;
+    }
+
+    /* Adjusting styles for better scrolling experience */
+    .experience p, .experience ul {
+      margin-top: 0; 
+      margin-bottom: 10px;
+    }
+  </style>
   </style>
 </head>
 <body>
