--- a/work-experiences.html
+++ b/work-experiences.html
@@ -120,6 +120,8 @@
           <li>Analyzing the current status of the entire project and providing advice and course of action on procurement and documentation-related matters.</li>
         </ul>
       </p>
+    <div class="section">
+          <h2 class="section-heading">Certifications & Awards</h2>
     </div>
 
 
