--- a/work-experiences.html
+++ b/work-experiences.html
@@ -121,7 +121,8 @@
         </ul>
       </p>
     <div class="section">
-          <h2 class="section-heading">Certifications & Awards</h2>
+          <p class="section-heading">Certifications & Awards</span>
+      </p>
     </div>
 
 
