--- a/work-experiences.html
+++ b/work-experiences.html
@@ -10,8 +10,8 @@
 
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #f4f4f4;
-      color: #333;
+      background-color: #dcedf9;
+      color: #1d6fa5;
       margin: 0;
       padding: 0;
       box-sizing: border-box;
