--- a/work-experiences.html
+++ b/work-experiences.html
@@ -27,7 +27,7 @@
     }
     
     h1 {
-  color: #3498db; /* Primary color */
+  color: #0c3451; /* Primary color */
   text-align: center;
   margin-top: 10px;
   margin-bottom: 20px;
