--- a/work-experiences.html
+++ b/work-experiences.html
@@ -152,7 +152,7 @@
          <li>Improvement Of Living Condition Of SENFPU, URUBATT, RSA, Himbi, Nyanzale, Kanyabayonga, Rwindi Camps In Goma Under OPSP Recommendations</li>
          <li>Erection Of Modules Corimec For UNPOL For Office Accommodation In RVA Base, Goma</li>
          <li>Improvement Of Living Condition Of DDRRR Camp In Mobambiro</li>
-         <li>IImprovement Of Living Accommodation Cluster For Women Within GUASFOR And INDRDB</li>
+         <li>Improvement Of Living Accommodation Cluster For Women Within GUASFOR And INDRDB</li>
          <li>Construction Of Rubb Hall For Banatu At Goma Airport</li>
          <li>Transformation Of Unused Sea Containers Into An Office</li>
          <li>Transformation of Sea containers Into Offices for FARDC, Goma</li>
