--- a/work-experiences.html
+++ b/work-experiences.html
@@ -217,7 +217,7 @@
     </div>
     
     <a href="index.html" class="home-btn">🏠 Homepage</a>
-    <a href="competencies.html" class="competencies-btn">🏆 Certifications & Competencies</a>
+    <a href="competencies.html" class="competencies-btn">🏆 Competencies</a>
   </div>
 </body>
 </html>
