--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+oal<!DOCTYPE html>
 <html lang="en">
   <head>
     <title>My Portfolio</title>
@@ -41,7 +41,8 @@
 						<ul class="links">
 							<li class="active"><a href="#main">Portfolio Projects</a></li>
 							<li><a href="aboutme.html">About Me</a></li> <!-- New link for "About Me" -->
-							<li><a href="work-experiences.html">Work Experiences</a></li> <!-- New link for "Professional Experience" -->
+							<li><a href="work-experiences.html">Professional Experience</a></li> <!-- New link for "Professional Experience" -->
+							<li><a href="competencies.html">Competencies</a></li>
 
 						</ul>
 						<ul class="icons">
