--- a/competencies.html
+++ b/competencies.html
@@ -1,1 +1,75 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+  <title>My Professional Competencies</title>
+  <link rel="stylesheet" href="assets/css/main.css" />
+  <link rel="icon" type="image/jpg" href="images/My Icon.JPG">
+  <style>
+    /* Your existing styles */
+    /* ... */
 
+    /* Additional styles for competencies page */
+    .competency {
+      background-color: #e6f2ff;
+      margin-bottom: 20px;
+      padding: 15px;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
+
+    .competency h2 {
+      color: #0c3451;
+      margin-bottom: 10px;
+    }
+
+    .competency p {
+      color: #071824;
+      font-size: 1em;
+    }
+
+    .skill-list {
+      list-style-type: none;
+      padding: 0;
+    }
+
+    .skill-list li {
+      background-color: #d1e0f0;
+      margin: 5px 0;
+      padding: 5px 10px;
+      border-radius: 4px;
+    }
+
+    /* Style adjustments for buttons */
+    .home-btn,
+    .competencies-btn {
+      margin-right: 10px;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h1>My Professional Competencies</h1>
+
+    <!-- Competency Section -->
+    <div class="competency">
+      <h2>Project Management</h2>
+      <p>Detail your experience and skills in project management, especially in the context of data center construction.</p>
+      <!-- Add more paragraphs as needed -->
+    </div>
+
+    <div class="competency">
+      <h2>Technical Proficiency</h2>
+      <ul class="skill-list">
+        <li>Primavera P6</li>
+        <li>Advanced Excel for Project Analysis</li>
+        <!-- Add more skills as needed -->
+      </ul>
+    </div>
+
+    <div class="competency">
+      <h2>Other Relevant Skills</h2>
+     </div>
+<a href="index.html" class="home-btn">🏠 Homepage</a>
+    <a href="work-experiences.html" class="work-btn">🏆 Competencies</a>
