--- a/competencies.html
+++ b/competencies.html
@@ -71,5 +71,6 @@
     <div class="competency">
       <h2>Other Relevant Skills</h2>
      </div>
-<a href="index.html" class="home-btn">🏠 Homepage</a>
-    <a href="work-experiences.html" class="work-btn">🏆 Competencies</a>
+        
+    <a href="index.html" class="home-btn">🏠 Homepage</a>
+    <a href="work-experiences.html" class="work-btn">👷‍♂️ Work Experiences</a>
