--- a/competencies.html
+++ b/competencies.html
@@ -9,6 +9,101 @@
   <style>
     /* Your existing styles */
     /* ... */
+<style>
+    /* Add custom styles for the About Me page */
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(45deg, #3498db, #e74c3c);
+      color: #fff;
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      animation: gradientAnimation 10s infinite alternate; /* Background animation */
+    }
+
+    @keyframes gradientAnimation {
+      0% {
+        background-position: 0% 50%;
+      }
+      100% {
+        background-position: 100% 50%;
+      }
+    }
+
+    .container {
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 20px;
+      background-color: rgba(255, 255, 255, 0.8); /* Semi-transparent white background */
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+      border-radius: 10px;
+      overflow: hidden;
+      position: relative;
+    }
+
+    h1 {
+      color: #3498db;
+      text-align: center;
+      margin-bottom: 10px;
+      font-size: 22px; /* Reduced font size */
+    }
+
+    p {
+      font-size: 1.2em;
+      line-height: 1.6;
+      color: #333;
+    }
+
+    .highlight {
+      color: #e74c3c;
+      font-weight: bold;
+    }
+
+    .image-container {
+      text-align: center;
+      margin-top: 20px;
+      position: relative;
+    }
+
+    .hover-image {
+      display: none;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 300px;
+      max-width: 100%;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
+
+    .image-container:hover .hover-image {
+      display: block;
+    }
+
+    /* Style for the home button */
+    .home-btn,
+    .work-btn {
+      display: inline-block;
+      background-color: #3498db;
+      color: #fff;
+      padding: 10px 20px;
+      text-decoration: none;
+      border-radius: 5px;
+      transition: background-color 0.3s;
+      margin-top: 20px;
+      cursor: pointer;
+    }
+
+    .home-btn:hover,
+    .work-btn:hover {
+      background-color: #2980b9;
+    }
+
+    /* Style for the work button icon */
+    .work-icon {
+      margin-right: 8px;
+    }
+
 
     /* Additional styles for competencies page */
     .competency {
