--- a/competencies.html
+++ b/competencies.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+al<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
@@ -168,4 +168,4 @@
      </div>
         
     <a href="index.html" class="home-btn">🏠 Homepage</a>
-    <a href="work-experiences.html" class="work-btn">👷‍♂️ Work Experiences</a>
+    <a href="work-experiences.html" class="work-btn">👷‍♂️ Professional Experience</a>
