--- a/aboutme.html
+++ b/aboutme.html
@@ -158,7 +158,7 @@
     <a href="index.html" class="home-btn">🏠 Go Back to Home</a>
 
     <!-- Work Experiences button -->
-    <a href="work-experiences.html" class="work-btn">👷‍♂️ Work Experiences</a>
+    <a href="work-experiences.html" class="work-btn">👷‍♂️ Professional Experience</a>
   </div>
 
   
