--- a/aboutme.html
+++ b/aboutme.html
@@ -155,7 +155,7 @@
     <p>Thanks for stopping by! Let's create something amazing together. 🚀</p>
 
     <!-- Home button -->
-    <a href="index.html" class="home-btn">🏠 Go Back to Home</a>
+    <a href="index.html" class="home-btn">🏠 Homepage</a>
 
     <!-- Work Experiences button -->
     <a href="work-experiences.html" class="work-btn">💼 Professional Experience</a>
