--- a/competencies.html
+++ b/competencies.html
@@ -102,7 +102,7 @@
 
   /* Additional styles for competencies page */
   .competency {
-    background-color: #e6f2ff;
+    background-color: #2b2b2b;
     margin-bottom: 20px;
     padding: 15px;
     border-radius: 8px;
