--- a/competencies.html
+++ b/competencies.html
@@ -102,7 +102,7 @@
 
   /* Additional styles for competencies page */
   .competency {
-    background-color: #2b2b2b;
+    background-color: #0c3451;
     margin-bottom: 20px;
     padding: 15px;
     border-radius: 8px;
@@ -110,7 +110,7 @@
   }
 
   .competency h2 {
-    color: #0c3451;
+    color: #071824;
     margin-bottom: 10px;
   }
 
@@ -125,7 +125,7 @@
   }
 
   .skill-list li {
-    background-color: #d1e0f0;
+    background-color: #2b2b2b;
     margin: 5px 0;
     padding: 5px 10px;
     border-radius: 4px;
