--- a/competencies.html
+++ b/competencies.html
@@ -146,21 +146,29 @@
     <!-- Competency Section -->
     <div class="competency">
       <h2>Project Management</h2>
-      <p>Detail your experience and skills in project management, especially in the context of data center construction.</p>
+      <p>PRINCE2® Foundation</p>
       <!-- Add more paragraphs as needed -->
     </div>
 
     <div class="competency">
       <h2>Technical Proficiency</h2>
       <ul class="skill-list">
-        <li>Primavera P6</li>
-        <li>Advanced Excel for Project Analysis</li>
-        <!-- Add more skills as needed -->
+        <li>ORACLE Primavera P6</li>
+        <li>Microsoft Project</li>
+        <li>ASTA PowerProject</li>
+        <li>TILOS</li>
+        <li>AutoCAD</li>
+        <li>Microsoft Excel</li>
+        
       </ul>
     </div>
 
     <div class="competency">
-      <h2>Other Relevant Skills</h2>
+      <h2>Languages</h2>
+      <ul class="skill-list">
+        <li>Turkish: Native proficiency</li>
+        <li>English: Professional working proficiency</li>
+        <li>Spanish: Intermediate proficiency</li>
      </div>
         
     <a href="index.html" class="home-btn">🏠 Homepage</a>
