--- a/competencies.html
+++ b/competencies.html
@@ -141,9 +141,16 @@
 </head>
 <body>
   <div class="container">
-    <h1>My Professional Competencies</h1>
+    <h1>My Competencies</h1>
 
     <!-- Competency Section -->
+    <div class="competency">
+      <h2>Education Background</h2>
+      <p>Istanbul Technical University</p>
+        <ul>Bachelor of Science, Civil Engineering (2007 - 2013)</ul>
+      <p>Okan University, Master of Social Sciences, Real Estate Financing and Valuation 2015 - 2018</p>
+    </div>
+    
     <div class="competency">
       <h2>Project Management</h2>
       <p>PRINCE2® Foundation</p>
@@ -159,7 +166,10 @@
         <li>TILOS</li>
         <li>AutoCAD</li>
         <li>Microsoft Excel</li>
-        
+        <li>SQL (PostGreSQL, SQLite, DBeaver)</li>
+        <li>Python</li>
+        <li>Streamlit</li>
+        <li>Appsheet</li>
       </ul>
     </div>
 
