--- a/competencies.html
+++ b/competencies.html
@@ -118,7 +118,11 @@
     color: #071824;
     font-size: 1em;
   }
-
+    
+  .competency ul {
+      color: #071824;
+      font-size: 1em;
+    }
   .skill-list {
     list-style-type: none;
     padding: 0;
