--- a/competencies.html
+++ b/competencies.html
@@ -150,9 +150,11 @@
     <!-- Competency Section -->
     <div class="competency">
       <h2>Education Background</h2>
-      <p>Istanbul Technical University</p>
+      <ul class="skill-list">
+      <li>Istanbul Technical University<li>
         <ul>Bachelor of Science, Civil Engineering (2007 - 2013)</ul>
-      <p>Okan University, Master of Social Sciences, Real Estate Financing and Valuation 2015 - 2018</p>
+      <li>Okan University, Master of Social Sciences, Real Estate Financing and Valuation 2015 - 2018<li>
+        </ul>
     </div>
     
     <div class="competency">
