--- a/competencies.html
+++ b/competencies.html
@@ -149,9 +149,7 @@
       <h2>Education Background</h2>
       <ul class="skill-list">
       <li>Istanbul Technical University
-        <li>Bachelor of Science, Civil Engineering (2007 - 2013)<li>
-      <li>
-        
+        Bachelor of Science, Civil Engineering (2007 - 2013)<li>
       <li>Okan University, Master of Social Sciences, Real Estate Financing and Valuation 2015 - 2018<li>
         </ul>
     </div>
