--- a/competencies.html
+++ b/competencies.html
@@ -148,11 +148,16 @@
     <div class="competency">
       <h2>Education Background</h2>
       <ul class="skill-list">
-      <li>Istanbul Technical University
-        Bachelor of Science, Civil Engineering (2007 - 2013)<li>
-      <li>Okan University, Master of Social Sciences, Real Estate Financing and Valuation 2015 - 2018<li>
-        </ul>
-    </div>
+      <li>
+        <strong>Istanbul Technical University</strong><br>
+        Bachelor of Science, Civil Engineering (2007 - 2013)
+      </li>
+      <li>
+        <strong>Okan University</strong><br>
+        Master of Social Sciences, Real Estate Financing and Valuation (2015 - 2018)
+      </li>
+    </ul>
+  </div>
     
     <div class="competency">
       <h2>Project Management</h2>
