--- a/competencies.html
+++ b/competencies.html
@@ -150,11 +150,11 @@
       <ul class="skill-list">
       <li>
         <strong>Istanbul Technical University</strong><br>
-        Bachelor of Science, Civil Engineering (2007 - 2013)
+        Bachelor of Science, Civil Engineering<br>(2007 - 2013)
       </li>
       <li>
         <strong>Okan University</strong><br>
-        Master of Social Sciences, Real Estate Financing and Valuation (2015 - 2018)
+        Master of Social Sciences, Real Estate Financing and Valuation<br>(2015 - 2018)
       </li>
     </ul>
   </div>
