--- a/competencies.html
+++ b/competencies.html
@@ -156,13 +156,20 @@
         <strong>Okan University</strong><br>
         Master of Social Sciences, Real Estate Financing and Valuation<br>(2015 - 2018)
       </li>
+        <li>
+        <strong>Le Wagon Mexico</strong><br>
+        Computer Programming, Full-Stack Data Science<br>(2015 - 2018)
+      </li>
     </ul>
   </div>
     
     <div class="competency">
-      <h2>Project Management</h2>
-      <p>PRINCE2® Foundation</p>
-      <!-- Add more paragraphs as needed -->
+      <h2>Certifications</h2>
+      <ul class="skill-list">
+        <li>
+          <strong>PRINCE2® Foundation</strong><br>
+          AXELOS<br>(2007 - 2013)
+        </li>
     </div>
 
     <div class="competency">
