--- a/competencies.html
+++ b/competencies.html
@@ -175,7 +175,7 @@
     <div class="competency">
       <h2>Technical Proficiency</h2>
       <ul class="skill-list">
-        <li>ORACLE Primavera P6</li>
+        <li><strong>ORACLE Primavera P6</strong></li>
         <li>Microsoft Project</li>
         <li>ASTA PowerProject</li>
         <li>TILOS</li>
