--- a/competencies.html
+++ b/competencies.html
@@ -149,16 +149,18 @@
       <h2>Education Background</h2>
       <ul class="skill-list">
       <li>
-        <strong>Istanbul Technical University</strong><br>
-        Bachelor of Science, Civil Engineering<br>(2007 - 2013)
+        <strong>
+          <a href="https://www.itu.edu.tr/" target="_blank">Istanbul Technical University</a>
+        </strong><br>
+        Bachelor of Science, Civil Engineering<br>2007 - 2013
       </li>
       <li>
         <strong>Okan University</strong><br>
-        Master of Social Sciences, Real Estate Financing and Valuation<br>(2015 - 2018)
+        Master of Social Sciences, Real Estate Financing and Valuation<br>2015 - 2018
       </li>
         <li>
         <strong>Le Wagon Mexico</strong><br>
-        Computer Programming, Full-Stack Data Science<br>(2015 - 2018)
+        Computer Programming, Full-Stack Data Science<br>2022
       </li>
     </ul>
   </div>
@@ -167,24 +169,48 @@
       <h2>Certifications</h2>
       <ul class="skill-list">
         <li>
-          <strong>PRINCE2® Foundation</strong><br>
-          AXELOS<br>(2007 - 2013)
+          <strong>PRINCE2® Foundation Certificate in Project Management</strong><br>
+          AXELOS<br>2007 - 2013
+        </li>
+        <li>
+          <strong>Construction Cost Estimating and Cost Control</strong><br>
+          COURSERA <br>2021
         </li>
     </div>
 
     <div class="competency">
       <h2>Technical Proficiency</h2>
       <ul class="skill-list">
-        <li><strong>ORACLE Primavera P6</strong></li>
-        <li>Microsoft Project</li>
-        <li>ASTA PowerProject</li>
-        <li>TILOS</li>
-        <li>AutoCAD</li>
-        <li>Microsoft Excel</li>
-        <li>SQL (PostGreSQL, SQLite, DBeaver)</li>
-        <li>Python</li>
-        <li>Streamlit</li>
-        <li>Appsheet</li>
+        <li>
+          <strong>ORACLE Primavera P6</strong>
+        </li>
+        <li>
+          <strong>Microsoft Project</strong>
+        </li>
+        <li>
+          <strong>ASTA PowerProject</strong>
+        </li>
+        <li>
+          <strong>TILOS</strong>
+        </li>
+        <li>
+          <strong>AutoCAD</strong>
+        </li>
+        <li>
+          <strong>Microsoft Excel</strong>
+        </li>
+        <li>
+          <strong>SQL (PostGreSQL, SQLite, DBeaver)</strong>
+        </li>
+        <li>
+          <strong>Python</strong>
+        </li>
+        <li>
+          <strong>Streamlit</strong>
+        </li>
+        <li>
+          <strong>Appsheet</strong>
+        </li>
       </ul>
     </div>
 
