--- a/competencies.html
+++ b/competencies.html
@@ -179,8 +179,11 @@
         Bachelor of Science, Civil Engineering<br>2007 - 2013
       </li>
       <li>
-        <strong>Okan University</strong><br>
-        Master of Social Sciences, Real Estate Financing and Valuation<br>2015 - 2018
+        <strong>
+          <a href="https://www.okan.edu.tr/en/" target="_blank">Okan University</a>
+        </strong><br>
+          <a href="https://www.okan.edu.tr/en/masterprograms/unit/125/property-financing-and-valuation/" target="_blank">Master of Social Sciences, Real Estate Financing and Valuation</a>
+        <br>2015 - 2018
       </li>
         <li>
         <strong>Le Wagon Mexico</strong><br>
