--- a/competencies.html
+++ b/competencies.html
@@ -176,7 +176,8 @@
         <strong>
           <a href="https://www.itu.edu.tr/" target="_blank">Istanbul Technical University</a>
         </strong><br>
-        Bachelor of Science, Civil Engineering<br>2007 - 2013
+          <a href="https://ins.itu.edu.tr/en/home" target="_blank">Bachelor of Science, Civil Engineering</a>
+        <br>2007 - 2013
       </li>
       <li>
         <strong>
