--- a/competencies.html
+++ b/competencies.html
@@ -187,8 +187,11 @@
         <br>2015 - 2018
       </li>
         <li>
-        <strong>Le Wagon Mexico</strong><br>
-        Computer Programming, Full-Stack Data Science<br>2022
+        <strong>
+          <a href="https://www.lewagon.com/mexico" target="_blank">Le Wagon Mexico</a>
+          </strong><br>
+          <a href="https://www.lewagon.com/data-science-course" target="_blank">Computer Programming, Full-Stack Data Science</a>
+        <br>2022
       </li>
     </ul>
   </div>
