--- a/competencies.html
+++ b/competencies.html
@@ -200,8 +200,11 @@
       <h2>Certifications</h2>
       <ul class="skill-list">
         <li>
-          <strong>PRINCE2® Foundation Certificate in Project Management</strong><br>
-          AXELOS<br>2007 - 2013
+          <strong>
+            <a href="https://www.linkedin.com/in/sgulec/details/certifications/" target="_blank">PRINCE2® Foundation Certificate in Project Management</a>
+            </strong><br>
+          <a href="https://www.axelos.com/" target="_blank">AXELOS</a>
+          <br>2007 - 2013
         </li>
         <li>
           <strong>Construction Cost Estimating and Cost Control</strong><br>
