--- a/competencies.html
+++ b/competencies.html
@@ -207,8 +207,46 @@
           <br>2007 - 2013
         </li>
         <li>
-          <strong>Construction Cost Estimating and Cost Control</strong><br>
-          COURSERA <br>2021
+          <strong>
+            <a href="https://www.linkedin.com/in/sgulec/details/certifications/" target="_blank">Construction Cost Estimating and Cost Control</a>
+            </strong><br>
+            <a href="https://www.coursera.org/account/accomplishments/certificate/WCKBR7S7N2CT" target="_blank">COURSERA</a>
+            <br>2021
+        </li>
+        <li>
+          <strong>
+            <a href="https://www.linkedin.com/in/sgulec/details/certifications/" target="_blank">Introduction to the Nonprofit Sector, Nonprofit Organizations, Nonprofit Leadership and Governance!</a>
+            </strong><br>
+            <a href="https://www.coursera.org/account/accomplishments/certificate/4Q22PLN8USNF" target="_blank">COURSERA</a>
+            <br>2021
+        </li>
+        <li>
+          <strong>
+            <a href="https://www.linkedin.com/in/sgulec/details/certifications/" target="_blank">Project Risk Management in ORACLE Primavera P6</a>
+            </strong><br>
+            <a href="https://www.akimeng.com/primavera-risk-analysis.html" target="_blank">AKIM ENGINEERING | Oracle Primavera Specialized Partner</a>
+            <br>2021
+        </li>
+        <li>
+          <strong>
+            <a href="https://www.linkedin.com/in/sgulec/details/certifications/" target="_blank">Project Risk Management in ORACLE Primavera P6</a>
+            </strong><br>
+            <a href="https://www.akimeng.com/primavera-risk-analysis.html" target="_blank">AKIM ENGINEERING | Oracle Primavera Specialized Partner</a>
+            <br>2021
+        </li>
+        <li>
+          <strong>
+            <a href="https://www.linkedin.com/in/sgulec/details/certifications/" target="_blank">PPBIM Powerproject, BIM Training Program</a>
+            </strong><br>
+            <a href="http://fndsite.com/?page_id=2260" target="_blank">FND - Future Network Development</a>
+            <br>2020
+        </li>
+        <li>
+          <strong>
+            <a href="https://www.linkedin.com/in/sgulec/details/certifications/" target="_blank">T104 TILOS Basic & Advance Training Program</a>
+            </strong><br>
+            <a href="http://fndsite.com/?page_id=12266" target="_blank">FND - Future Network Development</a>
+            <br>2020
         </li>
     </div>
 
