--- a/competencies.html
+++ b/competencies.html
@@ -248,6 +248,20 @@
             <a href="http://fndsite.com/?page_id=12266" target="_blank">FND - Future Network Development</a>
             <br>2020
         </li>
+        <li>
+          <strong>
+            <a href="https://www.linkedin.com/in/sgulec/details/certifications/" target="_blank">Primavera P6 Enterprise Project Portfolio Management Essentials</a>
+            </strong><br>
+            <a href="https://www.mimtekakademi.com/" target="_blank">MİMTEK AKADEMİ</a>
+            <br>2012
+        </li>
+        <li>
+          <strong>
+            <a href="https://www.linkedin.com/in/sgulec/details/certifications/" target="_blank">DRIVING BUSINESS TOWARDS THE SUSTAINABLE DEVELOPMENT GOALS</a>
+            </strong><br>
+            <a href="https://www.coursera.org/account/accomplishments/certificate/WCKBR7S7N2CT" target="_blank">COURSERA</a>
+            <br>2012
+        </li>
     </div>
 
     <div class="competency">
